--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "pythonlearn/zeabur-collaboration",
-    "description": "Python 協作學習平台 - 純 PHP 實現 (零依賴)",
+    "name": "pythonlearn/collaboration-platform",
+    "description": "Python 教學多人協作平台 - 純 PHP + WebSocket",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -10,23 +10,28 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": "^8.1",
+        "cboden/ratchet": "^0.4.4",
+        "ratchet/pawl": "^0.4.3",
+        "react/socket": "^1.16"
     },
-    "require-dev": {},
-    "autoload": {},
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "backend/classes/",
+            "WebSocket\\": "websocket/"
+        }
+    },
     "scripts": {
-        "start": "php test-servers/integrated-server.php",
-        "test": "php test-integrated-server.php"
+        "websocket:start": "php test-servers/stable-websocket-server.php",
+        "test": "phpunit tests/"
     },
     "config": {
-        "optimize-autoloader": false,
-        "classmap-authoritative": false
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
-    "extra": {
-        "zeabur": {
-            "type": "php-native",
-            "dependencies": "none",
-            "description": "純 PHP Socket 服務器，無外部依賴"
-        }
-    }
-} 
+    "minimum-stability": "stable",
+    "prefer-stable": true
+}
